# ezntfs

./: .gitignore  LICENSE  README.md  ezntfs.py  gui.py  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
ezntfs/: __init__.py  app.py  cli.py  ezntfs.py  gui.py
