[metadata]
name = ezntfs
version = 0.1.4
description = An easy-to-use wrapper for NTFS-3G on macOS
url = https://github.com/lezgomatt/ezntfs
author = Matt
author_email = lezgomatt@gmail.com
license = Zlib
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    License :: OSI Approved :: zlib/libpng License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Filesystems
    Topic :: Utilities

[options]
py_modules =
    ezntfs
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ezntfs = ezntfs:main
